[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "chromotion"
version = "0.2.1"
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "xarray",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "aicsimageio",
    "ome-types>=0.3.4,<0.4.0",
    "pint",
    "scikit-image",
]
